--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,6 @@ button {
     color: rgb(235, 235, 235);
     font-size: 30px;
     outline: none;
-    /* border: none; */
     cursor: pointer;
 }
 
@@ -23,6 +22,8 @@ button {
     padding: 40px 20px 10px 20px;
     font-size: 50px;
     text-align: right;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .buttons-grid {
